--- a/shell-roboshop/nginx.conf
+++ b/shell-roboshop/nginx.conf
@@ -48,10 +48,10 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue.farm2home.shop:8080/; }
-        location /api/user/ { proxy_pass http://user.farm2home.shop:8080/; }
-        location /api/cart/ { proxy_pass http://cart.farm2home.shop:8080/; }
-        location /api/shipping/ { proxy_pass http://shipping.farm2home.shop:8080/; }
-        location /api/payment/ { proxy_pass http://payment.farm2home.shop:8080/; }
+        #location /api/user/ { proxy_pass http://user.farm2home.shop:8080/; }
+        #location /api/cart/ { proxy_pass http://cart.farm2home.shop:8080/; }
+        #location /api/shipping/ { proxy_pass http://shipping.farm2home.shop:8080/; }
+        #location /api/payment/ { proxy_pass http://payment.farm2home.shop:8080/; }
 
         location /health {
           stub_status on;
