--- a/ansible/1-playbook.yaml
+++ b/ansible/1-playbook.yaml
@@ -1,5 +1,5 @@
 - name: ping the server
   hosts: web
-  task:
-  - name: ping the server
+  tasks:
+  - name: ping the web server
     ansible.builtin.ping: 
